--- a/boilerplate.html
+++ b/boilerplate.html
@@ -4,7 +4,7 @@
 <head>
   <title>Basic HTML5 skeleton</title>
   <meta charset="UTF-8">
-  <!-- stylesheet is lined in the head tag -->
+  <!-- stylesheet is linked in the head tag -->
 </head>
 
 <body>
