renamed html file to 'index'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Do it like this</p>
   <a href="http://lmgtfy.com/">A link</a>
 
-  <!-- JavaScript is usually linked just before the cosing body tag -->
+  <!-- JavaScript is usually linked just before the closing body tag -->
 </body>
 
 </html>
