--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 
 <body>
-  <h1>EVERYTHING YOU SEE IS IN THE BODY TAG</h1>
+  <h1>EVERYTHING VISIBLE IS IN THE BODY TAG</h1>
+  
   <p> Don't leave spaces either side of text </p>
   <p>Do it like this</p>
+
   <a href="http://lmgtfy.com/">A link</a>
+  
+  <img src="html-css-js.png" alt="Brief description of image here">
 
   <!-- JavaScript is usually linked just before the closing body tag -->
 </body>
