--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <title>Basic HTML5 skeleton</title>
   <meta charset="UTF-8">
-  <!-- stylesheet is linked in the head tag -->
+  <!-- the stylesheet is linked in the head tag -->
 </head>
 
 <body>
-  <h1>EVERYTHING VISIBLE IS IN THE BODY TAG</h1>
+  <!-- everything visible is in the body tag -->
+  <h1>Main title of the page here</h1>
   
-  <p> Don't leave spaces either side of text </p>
+  <p> Don't leave spaces inside tags </p>
   <p>Do it like this</p>
 
   <a href="http://lmgtfy.com/">A link</a>
