--- a/index.html
+++ b/index.html
@@ -4,20 +4,142 @@
 <head>
   <title>Basic HTML5 skeleton</title>
   <meta charset="UTF-8">
-  <!-- the stylesheet is linked in the head tag -->
+  <!-- stylesheet is linked in the head tag -->
 </head>
 
 <body>
-  <!-- everything visible is in the body tag -->
-  <h1>Main title of the page here</h1>
-  
-  <p> Don't leave spaces inside tags </p>
-  <p>Do it like this</p>
 
-  <a href="http://lmgtfy.com/">A link</a>
-  
   <img src="html-css-js.png" alt="Brief description of image here">
+   
+  <a href="http://ecoconsulting.co.uk/images/html-css-js.png">Ecoconsulting</a>
+  
+  <a href="http://lmgtfy.com/">A link</a>
 
+  <h1>**CTEC3905 MODULE HANDBOOK**</h1>
+  
+  <h2>Staff contact details</h2>
+  
+  <ul>
+    <li>Dave Everitt: dave.everitt@dmu.ac.uk</li>
+    <li>Fania Raczinski: fania.raczinski@dmu.ac.uk</li>
+  </ul>
+  
+  <p>Dave and Fania share teaching on this module. Although they are each allocated to assigned classes, this may vary according to demand.</p>
+  
+  <p><strong>**Please note:**</strong>Any essential contact outside workshop and lecture hours is strictly via email.</p>
+  
+  <h2>Module calendar</h2>
+  <p>Module classes and lectures run from weeks 1-11, with the final workshop in week 11 commencing 11 December. The final project hand-in date is: 12pm Wednesday 00 December 2017 (TBC).</p>
+
+  <p>All 2-hour workshops and lectures end 10 minutes early to allow for class changeover, so are actually 1hr 50mins.</p>
+  
+  <p>For specific class times and locations, please see your personal timetable.</p>
+  
+  <h1>Lab Schedule</h1>
+    <h2>Timetable</h2>
+    <table>
+      <tr>
+        <th>Week</th>
+        <th>Date</th>
+        <th>Lecture</th>
+		<th>Workshop</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2nd October</td>
+        <td>Introduction + History of HTML</td>
+		<td>HTML5 markup</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>9th October</td>
+        <td>History of CSS</td>
+		<td>CSS styling + box model</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>16th October</td>
+        <td>JavaScript ES6</td>
+		<td></td>
+      </tr>
+	  <tr>
+        <td>4</td>
+        <td>23rd October</td>
+        <td>TBC</td>
+		<td>TBC</td>
+      </tr>
+	   <tr>
+        <td>5</td>
+        <td>30th October</td>
+        <td>TBC</td>
+		<td>TBC</td>
+      </tr>
+    </table>
+	
+	<p><strong>Possible lab/lecture subjects:</strong></p>
+	
+	<ul>
+	  <li>The box model and CSS positioning of HTML elements</li>
+	  <li>mobile-first principle and responsive design</li>
+	  <li>Fetching and presenting data from APIs with JavaScript</li>
+	  <li>Information Architecture and design principles</li>
+	  <li>CSS3 animation</li>
+	  <li>some more advanced JavaScript (prototypes, promises, closures)</li>
+	</ul>
+	
+	<h2>Workshops</h2>
+    <strong>Location:</strong> See your personal timetable  
+    <p>One 2-hour workshop per week (see timetable above).</p>
+	
+	<p>Practical workshops involve semi-taught lab exercises and hands-on coding, and are a focussed place to work on your assignments and develop practical skills. Attending all workshops will ensure that you keep up with the learning outcomes and work towards your individual project assignment (see below for details). Students who attend regularly tend to produce higher-quality work and gain better marks.</p>
+    <strong>**Your attendance at workshops counts towards the ongoing viva (10% of the final module mark). A module-wide weekly evaluation will help track and personalise the learning experience.**</strong>
+    <p>Work submitted without sufficient attendance may not meet the required standard, so could be rejected, and code is <strong>**ALWAYS**</strong> examined for plagiarism.</p>
+  
+    <h2>Lectures</h2>
+    <strong>**Location:**</strong> Bede Island 0.05  
+    <strong>**Time:**</strong> Thursdays 16:00-18:00
+
+    <p>Ten 2-hour lectures, every week (see timetable above).</p>
+    <p>Lectures complement the practical workshops and cover essential technical issues as well as the wider perspectives on front-end web technologies. They also contain carefully-selected links for deeper information. You will learn to make intelligent choices and predict future industry trends in this rapidly-changing and complex field.</p>
+ 
+    <h2>Module details</h2>
+
+    <h3>Learning outcomes</h3>
+    <p>By the end of this module, through attendance and participation in workshops, and after successful completion of lab tasks and assignments, students will be able to:</p>
+    
+	<ul>
+      <li>1. Contextualise and critique the aims and culture driving current web technologies, how these have evolved and what part they play in modern web development.</li>
+      <li>2. Develop a critical understanding of basic design principles, Information Architecture (IA), usability principles and semantic markup, and how these determine navigability, usability and website/webapp structure.</li>
+      <li>3. Demonstrate evidence of a detailed understanding of the current front-end web technologies (HTML, CSS, Javascript), and make intelligent choices regarding their use and context.</li>
+      <li>4. Create a fully standards-compliant, responsive and accessible website using HTML5, CSS3 and Javascript.</li>
+    </ul>
+	
+	<p>In addition, best practice in general software development (e.g. version control, consistent code indentation, etc.) will be encouraged throughout the module. These will also be part of the marking criteria for the final project.</p>
+	
+	<h3>Blackboard resources</h3>
+
+    <p>Blackboard is a crucial part of this module, so take some time to read through the material there—it contains:</p>
+
+	<ul>
+      <li>Contact details (Dave + Fania)</li>
+      <li>Announcements (including jobs)</li>
+      <li>Module handbook + calendar</li>
+      <li>Assignments + detailed marking scheme</li>
+      <li>Labs (numbered, links to exercise code on GitHub)</li>
+      <li>Lectures (numbered, links to slides in HTML + PDF)</li>
+      <li>Resources</li>
+	</ul>
+
+    <p>The Resources section contains:<p>
+    <ul>
+      <li>GIT and GitHub guide</li>
+      <li>Articles, online tutorials, recommended books</li>
+      <li>Links to development tools</li>
+	</ul>
+	
+	<footer>
+	<p>© 2017 Zubair Lambat</p>
+	</footer>
   <!-- JavaScript is usually linked just before the closing body tag -->
 </body>
 
